<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.drinkapp.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/header_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:gravity="center"
        android:text="@string/header"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/inventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="134dp"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="134dp"
        android:onClick="invClickFunction"
        android:text="@string/inventory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/changeInventory"
        app:layout_constraintTop_toBottomOf="@+id/header_main" />

    <Button
        android:id="@+id/changeInventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/changeInv"
        app:layout_constraintBaseline_toBaselineOf="@+id/inventory"
        app:layout_constraintEnd_toStartOf="@+id/inventory"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="changeInvClickFunction"
        />

</android.support.constraint.ConstraintLayout>
